# inboundCarrierSales

./: .dockerignore  .gitignore  Dockerfile  README.md  calls.db  pyproject.toml  requirements.txt
.github/workflows/: azure-webapp-acr.yml  deploy-setup_inboundcarriersales-wa.yml  deploy-setup_inboundcarriersales-wa4c.yml
app/: main.py
app/data/: loads.json
app/db/: database.py  models.py
dashboard/: app.py
